@@ -1670,7 +1670,7 @@ If \lstinline!MC!\index{MC} is followed by \lstinline!FCJ!, the \lstinline!FCJ! 
 
 \section{FidoCadJ extensions}
 \label{FCJ_extension}
-Since version 0.21, FidoCadJ has started to introduce a few refinements over the original FidoCAD forma\index{FidoCadJ extension}. The FidoCadJ extensions are represented in the code by the command \lstinline!FCJ!\index{FCJ}. This command is not used alone, but means that FidoCadJ needs to specify additional information on what it is specified in the previous line.
+Since version 0.21, FidoCadJ has started to introduce a few refinements over the original FidoCAD format\index{FidoCadJ extension}. The FidoCadJ extensions are represented in the code by the command \lstinline!FCJ!\index{FCJ}. This command is not used alone, but means that FidoCadJ needs to specify additional information on what it is specified in the previous line.
 Here is an example:
 \begin{lstlisting}
 [FIDOCAD]
