@@ -1,6 +1,6 @@
 #!/bin/sh
 
 mv jar/fidocadj.jar jar/nfidocadj.jar
-jarsigner -keystore compstore -signedjar jar/fidocadj.jar jar/nfidocadj.jar darwinne
+jarsigner -keystore FidoCadJstore -signedjar jar/fidocadj.jar jar/nfidocadj.jar signFidoCadJ
 rm jar/nfidocadj.jar
 
